# pve-storpool

./: .editorconfig  .gitignore  .vimrc  Makefile  README.md  mkdocs.yml  pve-storpool_0.2.0.orig.tar.gz.asc  pve-storpool_0.2.0.orig.tar.gz.delta  pve-storpool_0.2.0.orig.tar.gz.id  pve-storpool_0.2.1.orig.tar.gz.asc  pve-storpool_0.2.1.orig.tar.gz.delta  pve-storpool_0.2.1.orig.tar.gz.id  pve-storpool_0.2.2.orig.tar.xz.asc  pve-storpool_0.2.2.orig.tar.xz.delta  pve-storpool_0.2.2.orig.tar.xz.id  pve-storpool_0.2.3.orig.tar.xz.asc  pve-storpool_0.2.3.orig.tar.xz.delta  pve-storpool_0.2.3.orig.tar.xz.id  pyproject.toml  set-pve-watchdog  sp-watchdog-mux.service  tox.ini
.reuse/: dep5
debian/: changelog  clean  control  copyright  pve-storpool.dirs  pve-storpool.docs  pve-storpool.install  pve-storpool.postinst  pve-storpool.postrm  rules  watch
docs/: changes.md  data.md  index.md  install.md  todo.md  watchdog.md
patches/: 01-qemu-server.patch
python/: tox.ini
requirements/: docs.txt
resources/: storpool_proxmox_logrotate
rust/: Cargo.toml  run-clippy.sh
rust/src/: defs.rs  lib.rs  parse.rs  path.rs  tests.rs  types.rs
rust/src/backend/: https.rs  mod.rs
t/: 00_use.t  01_version.t  02_required_plugin_methods.t  03_plugin_methods.t  04_required_methods_result.t  05_config.t  06_http_request.t  07_syslog.t  08_parse_volname.t  09_not_yes_implemented.t  10_activate_storage.t  11_alloc_image.t  12_filesystem_path.t  13_activate_volume.t  14_deactivate_volume.t  15_free_image.t  16_volume_has_feature.t  17_volume_size_info.t  18_list_volumes.t  (+13 more)
(+16 files in other folders)
