[package]
name = "proxmoxy"
version = "0.2.0"
edition = "2021"
rust-version = "1.61"
authors = ["StorPool <support@storpool.com>"]

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.4", features = ["derive"] }
itertools = "0.10.5"
nom = "7.1.3"
regex = "1.7.1"
reqwest = "0.11.13"
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.89"
thiserror = "1.0.38"
tokio = { version = "1.22.0", features = ["macros", "rt", "rt-multi-thread"] }
toml = "0.5.9"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
typed-format-version = "0.2.1"
xdg = "2.5.0"

[dev-dependencies]
tracing-test = "0.2.4"
